modified name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_1",
+  "name": "simple layout bootstrap 4",
   "version": "1.0.0",
   "description": "Bootstrap 4 project",
   "main": "index.html",
